# sdk-tools

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_arm64-v8a.sh  build_armeabi-v7a.sh  build_x84.sh  build_x84_64.sh  create_protoc.sh
android-11/: README.md
android-11/frameworks/base/libs/androidfw/: ConfigDescription.cpp
android-11/frameworks/base/tools/aapt2/: ResourceTable.cpp  ResourceUtils.cpp  Resources.pb.cc  Resources.pb.h  Resources.proto
android-11/frameworks/base/tools/aapt2/cmd/: Link.cpp
android-11/frameworks/base/tools/aapt2/java/: JavaClassGenerator.cpp
android-11/frameworks/base/tools/aapt2/link/: ManifestFixer.cpp  ReferenceLinker.cpp
android-11/frameworks/base/tools/aapt2/text/: Unicode.cpp
android-11/system/core/liblog/: log.cpp
android-11/system/core/liblog/include/android/: log.h
android-11/system/core/libprocessgroup/cgrouprc/include/android/: cgrouprc.h
android-11/system/core/libutils/include/utils/: Condition.h
android-11/system/core/libziparchive/: zip_archive.cc
cmake/: CMakeLists.txt
cmake/aapt/: CMakeLists.txt
cmake/aapt2/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/androidfw/: CMakeLists.txt
cmake/lib/expat/: CMakeLists.txt
cmake/lib/gtest/: CMakeLists.txt
cmake/lib/libbase/: CMakeLists.txt
cmake/lib/libbuildversion/: CMakeLists.txt
cmake/lib/libcpu_features/: CMakeLists.txt
cmake/lib/libcutils/: CMakeLists.txt
cmake/lib/libcxx/: CMakeLists.txt
cmake/lib/libcxxabi/: CMakeLists.txt
cmake/lib/libjsoncpp/: CMakeLists.txt
cmake/lib/liblog/: CMakeLists.txt
cmake/lib/libpng/: CMakeLists.txt
cmake/lib/libprocessgroup/: CMakeLists.txt
cmake/lib/libutils/: CMakeLists.txt
cmake/lib/libvndksupport/: CMakeLists.txt
cmake/lib/libziparchive/: CMakeLists.txt
cmake/lib/protobuf/: CMakeLists.txt
cmake/lib/zlib/: CMakeLists.txt
cmake/modules/: Android.cmake
patch/: log.h.patch  xmlparse.c.patch
